--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "chat with webRTC in nodeJS",
   "main": "index.js",
   "scripts": {
-    "devStart":"nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
